[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/tiles-pixel/Egypt/sand_right.png" type="Texture" id=1]
[ext_resource path="res://Levels/Level2/MudFloor.gd" type="Script" id=2]
[ext_resource path="res://assets/Forest Objects/stick.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles-pixel/Egypt/sand_left.png" type="Texture" id=4]
[ext_resource path="res://assets/tiles-pixel/Egypt/sand_mid.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/digging.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 4 )

[node name="MudFloor" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -16, 0 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -12 )
shape = SubResource( 2 )

[node name="StickHint" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -60 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
